new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -663,8 +663,14 @@
         }
         return count
     }
+//вернуть минимальное значение из массива что нет или вернуть значение что будет последующим из набора
+//     function nextId(ids){
+//         let res = 0
+//         while (ids.includes(res)) res++
+//         return res
+//     }
 
-//посчитать сумму массиса с вложенными массивам
+//посчитать сумму массива с вложенными массивам
     //function stairsIn20(a) {
     //return 20 * a.reduce((s, a) => s + a.reduce((s, n) => s + n, 0), 0);
     //}
