--- a/src/main.html
+++ b/src/main.html
@@ -663,6 +663,11 @@
         }
         return count
     }
+    //функция что проверяет NaN ли пришел / Number.isNaN
+    // function isReallyNaN(val) {
+    //     return val != val;
+    // };
+
 //вернуть минимальное значение из массива что нет или вернуть значение что будет последующим из набора
 //     function nextId(ids){
 //         let res = 0
