new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -663,6 +663,11 @@
         }
         return count
     }
+    //отсортировать строки по чар коду
+    // function sortString(values) {
+    //     return values.sort((a,b) => a > b ? 1 : -1)
+    // }
+
     //функция что проверяет NaN ли пришел / Number.isNaN
     // function isReallyNaN(val) {
     //     return val != val;
