new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -663,6 +663,15 @@
         }
         return count
     }
+
+    // найти цену товара с вычетом налога, используем 1- 1/1.15 чтобы точно найти на что нужно умножить
+    // function excludingVatPrice(price){
+    //     // your code
+    //     if (null === price) return -1
+    //     let res =price - price * (1 - 1/1.15)
+    //     return +res.toFixed(2)
+    // }
+
     //отсортировать строки по чар коду
     // function sortString(values) {
     //     return values.sort((a,b) => a > b ? 1 : -1)
