--- a/src/main.html
+++ b/src/main.html
@@ -671,6 +671,11 @@
     //     let res =price - price * (1 - 1/1.15)
     //     return +res.toFixed(2)
     // }
+    // function excludingVatPrice(price){
+    //     // your code
+    //     if (price === null) return -1
+    //     return +(price / 1.15).toFixed(2)
+    // }
 
     //отсортировать строки по чар коду
     // function sortString(values) {
