new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -664,6 +664,9 @@
         return count
     }
 
+    //развернуть массив с вложенными массивами, вроде как не ниже 1го уровня
+    //[].concat(...arr)
+
     // найти цену товара с вычетом налога, используем 1- 1/1.15 чтобы точно найти на что нужно умножить
     // function excludingVatPrice(price){
     //     // your code
