new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -23,6 +23,18 @@
     let aza55 = new As("h")
     console.log(aza55)
 
+    //Выводит CBA сначала выводим первый промис, Показывает С, и добавляет колбэк в очередь тасок, затем выводим 2ой колбэк Б, и потом финальный колбэк с А
+    //const p = new Promise((resolve) => {
+    // resolve('')
+    // })
+    //
+    // p.then(() => {
+    //     p.then(() => console.log('A'))
+    //     console.log("C")
+    // })
+    //
+    // p.then(() => console.log('B'))
+
     //globalThis - позволяет обратиться к глобальному объекту вне зависимости от среды, будет работать и под ноду и под виндоу
 
     //Преобразование Symbol к логическуому типу всегда true, к числу - ошибка, к строке только явно через String, иначе ошибка.
